kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vector
  labels:
    app.kubernetes.io/name: vector
    app.kubernetes.io/part-of: vector-platform
